--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "json-server": "^1.0.0-alpha.23",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-roulette-pro": "^3.1.1",
     "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
@@ -24,6 +25,6 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8"
+    "vite": "^5.1.0"
   }
 }
